--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -2,7 +2,15 @@ html {
     background-color: #255839;
   }
 
-h1, h2, h3, h4, h5, h6, p {
-color: #F3FAA0;
-font-family: "Roboto";
+body {
+  font-family: 'Roboto';
+}
+
+h1, h2, h3, h4, h5, h6 {
+  color: #F3FAA0;
+}
+
+p {
+  color: #F3FAA0;
+  font-size: 36px;
 }
