styling for the seat pickere

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -32,14 +32,17 @@ a {
 }
 
 .nrSeatButton {
-  background: white;
   border: none;
-
 }
-.nrSeatButton.selected {
-  background: yellow;
+.nrSeatButton svg {
+  color: black;
+}
+.nrSeatButton.selected svg {
+  color: orangered;
 }
 .nrSeatButton.reserved {
-  background: grey;
-  pointer-events: none;
+    pointer-events: none;
+}
+.nrSeatButton.reserved svg {
+  color: grey;
 }
